fix nav links spacing

--- a/app/assets/stylesheets/photofinish.css
+++ b/app/assets/stylesheets/photofinish.css
@@ -402,8 +402,16 @@ a:hover {
   padding-top: 2%;
 }
 
+#nav-left {
+  margin-left: 2%;
+}
+
+#nav-right {
+  margin-right: 2%;
+}
+
 .nav-link {
-  margin: 5%;
+  margin: 10px;
   padding: 1%;
   font-size: 1.3em;
 }
